--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jest": "^28.1.0",
     "mongoose": "^6.3.3",
     "multer": "^1.4.4",
+    "nodemon": "^2.0.16",
     "path": "^0.12.7"
   }
 }
