--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.3",
     "multer": "^1.4.4",
+    "music-metadata": "^7.12.3",
     "nodemailer": "^6.7.5",
     "nodemailer-express-handlebars": "^5.0.0",
     "nodemon": "^2.0.16",
