--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --watchAll --runInBand --detectOpenHandles",
     "start": "nodemon app.js"
   },
   "author": "",
@@ -14,14 +14,18 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "jest": "^28.1.0",
+    "http-errors": "^2.0.0",
+    "jest": "^28.1.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.3",
     "multer": "^1.4.4",
     "music-metadata": "^7.12.3",
     "nodemailer": "^6.7.5",
     "nodemailer-express-handlebars": "^5.0.0",
-    "nodemon": "^2.0.16",
-    "path": "^0.12.7"
+    "nodemon": "^2.0.19",
+    "path": "^0.12.7",
+    "selenium-webdriver": "^4.3.1",
+    "sinon": "^14.0.0",
+    "supertest": "^6.2.4"
   }
 }
